fixed nav bar alignment on mobile view for all browsers

--- a/style.css
+++ b/style.css
@@ -229,6 +229,7 @@ a.menu-icon{
 	overflow: hidden;
 	position: fixed;
 	bottom: 0;
+	margin: auto;
 	width: 60%;
 	height: 10px;
 }
@@ -245,16 +246,23 @@ a.menu-icon{
 
 /*----------------------------------RESPONSIVE-----------------------------------*/
 /* Phones: Portrait and Landscape */
-@media (max-width: 767px) {
+
 		.social-nav{
-			position:fixed;
-			min-width: 320px;
-			height: 32px;
-			padding-right: 48px;
-			padding-left: 48px;
+			display: flex;
+		  justify-content: space-between;
+			align-items: center;
+		  padding-top: 16px;
+			padding-bottom: 16px;
+			padding-right: 24px;
+			padding-left: 24px;
+			background-color: #142D3D;
+			overflow: hidden;
 			position: fixed;
 			bottom: 0;
-			overflow: hidden;
+			left: 0;
+			width: 100%;
+			height: 60px;
+			box-sizing: border-box;
 			z-index: 3;
 		}
 
@@ -331,12 +339,13 @@ a.menu-icon{
 			min-width: 320px;
 			width: 100%;
 			height: 32px;
-			padding-right: 100px;
-			padding-left: 100px;
+			padding-right: 24px;
+			padding-left: 24px;
 			position: fixed;
 			bottom: 0;
 			overflow: hidden;
 			z-index: 3;
+			margin: auto;
 		}
 
 		a.menu-icon{
@@ -368,51 +377,3 @@ a.menu-icon{
 			cursor: pointer;
 		}
 	}
-
-	/* ----------- iPad Pro ----------- */
-	/* Portrait and Landscape */
-	/*@media only screen
-	  and (min-width: 1024px)
-	  and (max-height: 1366px)
-	  and (-webkit-min-device-pixel-ratio: 1.5){
-			a:link{
-				font-weight: bolder;
-				color: #142D3D;
-				text-decoration: none;
-				background-color: #F1F080;
-				}
-
-			.content{
-				overflow: hidden;
-				min-width: 268px;
-				width: 100%;
-			}
-
-			.navigation{
-					width: 100vw;
-			}
-
-			.social-nav{
-				min-width: 320px;
-				width: 100%;
-				height: 32px;
-				padding-right: 100px;
-				padding-left: 100px;
-				position: fixed;
-				bottom: 0;
-				overflow: hidden;
-			}
-
-			a.menu-icon{
-				visibility: visible;
-				background-color: transparent;
-			}
-
-			a.social-link{
-				background-color: transparent;
-			}
-
-			.nav{
-				visibility: hidden;
-			}
-	}*/
